--- a/source/sass/catalog.scss
+++ b/source/sass/catalog.scss
@@ -9,8 +9,8 @@
 .catalog__title {
   @include reset-indents;
   @include mobile-center;
-  padding-top: 75px;
-  padding-bottom: 65px;
+  padding-top: 70px;
+  padding-bottom: 75px;
 }
 
 .catalog__list {
@@ -24,13 +24,25 @@
 }
 
 @media (min-width: $tablet-width) {
+  .catalog__title-bg {
+    border-top: 1px solid $grey--lines;
+    margin-top: -40px;
+  }
+
   .catalog__title {
     @include tablet-center;
-    min-height: 224px;
+    min-height: 129px;
+    padding-top: 95px;
+    padding-bottom: 0;
+    margin-bottom: 80px;
   }
 
   .catalog__wrapper {
     @include tablet-center;
+  }
+
+  .catalog__item {
+    margin-top: 52px;
   }
 }
 
@@ -44,6 +56,7 @@
   .catalog__title {
     @include desktop-title;
     @include desktop-center;
-    min-height: 250px;
+    min-height: 155px;
+    margin-bottom: 80px;
   }
 }
