--- a/source/sass/color.scss
+++ b/source/sass/color.scss
@@ -2,28 +2,86 @@
   @include reset-indents;
   @include mobile-center;
   margin-top: 20px;
+  border: none;
 }
 
 .color__title {
   @include reset-indents;
   color: $turquoise;
   text-transform: uppercase;
+  position: relative;
+  margin-bottom: -15px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 198px;
+    height: 1px;
+    background: $turquoise;
+    top: 12.5px;
+    left: 62px;
+  }
+}
+
+.color__checkbox input[type="checkbox"] + label {
+  @include reset-indents;
+  display: inline-block;
+  position: relative;
+  margin-left: 62px;
+  line-height: 18px;
+  margin-top: 40px;
+}
+
+.color__checkbox input[type="checkbox"] {
+  display: none;
+}
+
+.color__checkbox input[type="checkbox"] + label::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 36px;
+  height: 35px;
+  border: 2px solid $grey;
+  top: -10px;
+  left: -60px;
+}
+
+.color__checkbox input[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 16px;
+  height: 2px;
+  background: $turquoise;
+  transform: rotate(45deg);
+  top: 1px;
+  left: -48.5px;
 }
 
 @media (min-width: $tablet-width) {
   .color {
     background-color: $grey--lighter;
     width: 100%;
+    padding-bottom: 68px;
   }
 
   .color__wrap {
-    display: flex;
-
     @include tablet-center;
+    display: flex;
+    margin-top: 18px;
+    font-size: 19px;
   }
 
   .color__title {
     width: 168px;
+    margin-top: 45px;
+    font-size: 17px;
+
+    &::before {
+      display: none;
+    }
   }
 
   .color__wrap-checkbox {
@@ -35,10 +93,53 @@
   .color__checkbox {
     width: 215px;
   }
+
+  .color__checkbox input[type="checkbox"] + label {
+    margin-left: 80px;
+    margin-top: 50px;
+
+    &::before {
+      width: 50px;
+      height: 48px;
+      top: -18px;
+      left: -80px;
+    }
+  }
+
+  .color__checkbox--margin {
+    margin-left: 42px;
+  }
 }
 
 @media (min-width: $desktop-width) {
+  .color {
+    padding-bottom: 60px;
+  }
+
+  .color__title {
+    margin-left: 60px;
+    margin-top: 60px;
+  }
+
   .color__wrap {
     @include desktop-center;
+  }
+
+  .color__wrap-checkbox {
+    width: 850px;
+  }
+
+  .color__checkbox--margin {
+    margin: 0;
+  }
+
+  .color__checkbox input[type="checkbox"] + label {
+    margin-left: 30px;
+    margin-top: 60px;
+    padding-right: 30px;
+  }
+
+  .color__checkbox {
+    margin-right: 50px;
   }
 }
