--- a/source/sass/comments.scss
+++ b/source/sass/comments.scss
@@ -4,7 +4,7 @@
 
 .comments__title {
   @include reset-indents;
-  margin-top: 60px;
+  margin-top: 50px;
   font-size: 25px;
   color: $black;
 }
@@ -15,40 +15,57 @@
 
 .comments__content {
   @include reset-indents;
-  margin-top: 35px;
+  margin-top: 25px;
   font-weight: normal;
   font-size: 15px;
+  line-height: 30px;
 }
 
 .comments__author {
   @include reset-indents;
-  margin-top: 41px;
+  margin-top: 28px;
 }
 
 .comments__author-link {
   @include reset-indents;
   font-weight: normal;
+  margin-top: 10px;
 }
 
 .comments__add-comment {
-  margin-top: 38px;
+  margin-top: 33px;
 }
 
 @media (min-width: $tablet-width) {
   .comments {
+    position: relative;
     margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
 
+  .comments::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 350px;
+    height: 457px;
+    background-image: url("../img/review@1x.jpg");
+    z-index: -120;
+    left: -45px;
+    top: -15px;
+  }
+
   .comments__title {
     @include tablet-title;
     order: -1;
+    margin-top: 60px;
   }
 
   .comments__content {
     @include td-content;
+    margin-top: 50px;
   }
 
   .comments__add-comment {
@@ -59,19 +76,21 @@
   }
 
   .comments__author {
-    margin-top: 50px;
+    margin-top: 55px;
   }
 
   .comments__toggles {
     @include reset-indents;
     width: 167px;
     margin-left: auto;
-    margin-top: -60px;
+    margin-top: -50px;
+    border: none;
   }
 
   .comments-toggle {
     @include reset-indents;
     width: 80px;
+    border: none;
   }
 }
 
@@ -82,5 +101,26 @@
 
   .comments__toggles {
     margin-left: 705px;
+  }
+
+  .comments__title {
+    @include desktop-title;
+  }
+
+  .comments::before {
+    left: -175px;
+  }
+
+  .comments__add-comment {
+    margin-top: 68px;
+  }
+
+  .comments__content {
+    margin-top: 40px;
+    padding-right: 100px;
+  }
+
+  .comments__author {
+    margin-top: 45px;
   }
 }
