--- a/source/sass/copyright.scss
+++ b/source/sass/copyright.scss
@@ -1,14 +1,32 @@
 .copyright {
-  //display: block;
   @include reset-indents;
-  padding-top: 27px;
+  display: flex;
+  padding-top: 10px;
   background-color: $grey--lighter;
   height: 80px;
+  justify-content: center;
 }
 
 .copyright__text {
   @include reset-indents;
   font-size: 19px;
   line-height: 20px;
-  margin-top: 27px;
+  margin-top: 17px;
+  margin-right: 28px;
+}
+
+.copyright__link-img {
+  width: 27px;
+  height: 34px;
+  margin-top: 2px;
+}
+
+.copyright__link {
+  margin-top: 10px;
+}
+
+@media (min-width: $tablet-width) {
+  .copyright {
+    padding-top: 45px;
+  }
 }
