--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -1,7 +1,7 @@
 .features__title {
   @include reset-indents;
   font-size: 25px;
-  margin-top: 75px;
+  margin-top: 70px;
 }
 
 .features__list {
@@ -12,6 +12,55 @@
 
 .features__item {
   margin-top: 85px;
+  position: relative;
+}
+
+.features__item::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 32px;
+  height: 37px;
+  top: -52px;
+  left: 10px;
+}
+
+.features__item--eco::before {
+  background-image: url("../img/icon-feature-flower.svg");
+}
+
+.features__item--style::before {
+  width: 47px;
+  height: 28px;
+  background-image: url("../img/icon-feature-money.svg");
+  left: 0;
+}
+
+.features__item--likes::before {
+  width: 33px;
+  height: 28px;
+  background-image: url("../img/icon-feature-heart.svg");
+}
+
+.features__item--handmade::before {
+  width: 35px;
+  height: 35px;
+  background-image: url("../img/icon-feature-ball.svg");
+  left: 0;
+}
+
+.features__item--support::before {
+  width: 55px;
+  height: 23px;
+  background-image: url("../img/icon-feature-rocket.svg");
+  left: 0;
+}
+
+.features__item--gift::before {
+  width: 33px;
+  height: 32px;
+  background-image: url("../img/icon-feature-gift.svg");
+  left: 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -63,5 +112,14 @@
   .features__title {
     font-size: 53px;
     line-height: 57px;
+    margin-top: 155px;
+  }
+
+  .features__list {
+    width: 700px;
+  }
+
+  .features__item {
+    margin-right: 50px;
   }
 }
