--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -1,8 +1,8 @@
 .main-header {
   @include reset-indents;
   width: 320px;
-  border: 1px solid black;
   margin: 0 auto;
+  position: relative;
 }
 
 .main-header__wrapper {
@@ -10,23 +10,49 @@
   flex-direction: column;
 }
 
+.main-header__main-nav-toggle {
+  @include reset-indents;
+  display: block;
+  width: 20px;
+  height: 14px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/icon-menu-open.svg");
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
+}
+
+.main-header__main-nav-toggle--open {
+  width: 21px;
+  height: 20px;
+  background-image: url("../img/icon-menu-close.svg");
+}
+
 .main-header__logo {
   @include reset-indents;
-  width: 86px;
-  height: 79px;
-  border: 1px solid black;
-  margin: 0 auto;
+  min-height: 79px;
+  border-bottom: 1px solid $grey--lines;
+  width: 100%;
+  text-align: center;
 }
 
 .main-header__logo-image {
   @include reset-indents;
   padding-top: 22px;
-  padding-bottom: 22px;
+  padding-bottom: 12px;
+  width: 86px;
+  height: 35px;
 }
 
 @media (min-width: $tablet-width) {
   .main-header {
     width: 100%;
+  }
+
+  .main-header__main-nav-toggle {
+    display: none;
   }
 
   .main-header__wrapper {
@@ -39,12 +65,17 @@
     width: 111px;
     height: 46px;
     margin-right: -111px;
+    border: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .main-header {
     width: 100%;
+  }
+
+  .main-header__main-nav-toggle {
+    display: none;
   }
 
   .main-header__wrapper {
