--- a/source/sass/nav-list.scss
+++ b/source/sass/nav-list.scss
@@ -1,7 +1,6 @@
 .nav-list {
   @include reset-indents;
   list-style: none;
-  border: 1px solid;
   margin: 0 auto;
 }
 
@@ -9,14 +8,23 @@
   @include mobile-center;
   padding-top: 33px;
   padding-bottom: 30px;
-  border: 1px solid black;
+  border-bottom: 1px solid $grey--lines;
+  width: 100%;
 }
 
 .nav-list__link {
   text-decoration: none;
   color: $black;
   line-height: 24px;
-  margin-left: 40px;
+  margin-left: 75px;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -26,17 +34,54 @@
     order: 2;
     display: flex;
     flex-direction: row;
-    width: 334px;
+    width: 370px;
     margin-left: -204px;
+    margin-top: 15px;
   }
 
   .nav-list__item {
     @include reset-indents;
+    width: 160px;
+    font-size: 15px;
+    border: none;
+    margin-right: 10px;
+  }
+
+  .nav-list__link {
+    margin: 0;
   }
 }
 
 @media (min-width: $desktop-width) {
   .nav-list {
     @include reset-indents;
+    min-height: 88px;
+    width: 500px;
+  }
+
+  .nav-list__item {
+    padding-top: 33px;
+    padding-bottom: 30px;
+    width: 185px;
+    margin-right: 35px;
+  }
+
+  .nav-list__link--line {
+    position: relative;
+  }
+
+  .nav-list__link--line::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 1px;
+    height: 88px;
+    background: $grey--lines;
+    top: -33px;
+    left: 185px;
+  }
+
+  .nav-list__link {
+    font-size: 17px;
   }
 }
