--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -8,25 +8,32 @@
   background-color: $grey--lighter;
   width: 100%;
   min-height: 284px;
+  background-image: url("../img/hero-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center -15px;
 }
 
 .page-main__title {
   @include reset-indents;
   @include mobile-center;
   font-size: 27px;
-  padding-top: 75px;
+  padding-top: 70px;
+  text-align: center;
 }
 
 @media (min-width: $tablet-width) {
   .page-main__title-wrapper {
     @include reset-indents;
+    width: 100%;
     min-height: 627px;
+    margin-top: -40px;
+    border-top: 1px solid $grey--lines;
   }
 
   .page-main__title {
     @include tablet-title;
     @include tablet-center;
-    padding-top: 155px;
+    padding-top: 153px;
   }
 
   .page-main__wrapper {
@@ -38,7 +45,7 @@
   .page-main__title {
     @include desktop-title;
     @include desktop-center;
-    padding-top: 163px;
+    //padding-top: -25px;
   }
 
   .page-main__wrapper {
