--- a/source/sass/production.scss
+++ b/source/sass/production.scss
@@ -1,24 +1,49 @@
+.production {
+  border: 1px solid $grey--lines;
+  margin-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 57px;
+}
+
 .production__title {
   @include reset-indents;
+  position: relative;
   font-size: 17px;
   line-height: 24px;
-  margin-top: 90px;
+  padding-top: 25px;
+  padding-bottom: 22px;
+  padding-left: 90px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    background-image: url("../img/icon-video.svg");
+    left: 33px;
+    top: 30px;
+  }
 }
 
 .production__videoplayer {
+  @include reset-indents;
   position: relative;
 }
 
 .production__video {
   @include reset-indents;
-
-  margin-top: 26px;
+  width: 260px;
+  height: 150px;
 }
 
 .production__play-button {
   position: absolute;
-  top: 50%;
+  top: 37px;
   left: 30%;
+  width: 100px;
+  height: 77px;
+  z-index: 10000;
+  background-image: url("../img/icon-play.svg");
 }
 
 .production__intro {
@@ -27,48 +52,95 @@
   line-height: 24px;
   font-weight: normal;
   color: $grey;
-  margin-top: 34px;
+  margin-top: -3px;
+  padding-top: 28px;
+  padding-left: 33px;
+  padding-right: 40px;
 }
 
 .production__make-order {
-  margin-top: 30px;
+  width: 192px;
+  margin: 0 auto;
+  margin-top: 25px;
 }
 
 @media (min-width: $tablet-width) {
   .production {
     display: flex;
+    width: 668px;
     flex-wrap: wrap;
     margin-top: 53px;
+    padding-bottom: 43px;
+    margin-bottom: 62px;
   }
 
   .production__video {
     width: 668px;
+    height: 455px;
   }
 
   .production__videoplayer {
     order: -1;
     margin-right: 30px;
+    width: 668px;
+  }
+
+  .production__play-button {
+    top: 189px;
+    left: 283px;
   }
 
   .production__title {
     font-size: 20px;
     line-height: 24px;
-    margin-top: 44px;
+    margin-top: 10px;
+    margin-left: 15px;
+
+    &::before {
+      left: 30px;
+      top: 20px;
+    }
   }
 
   .production__intro {
     font-size: 15px;
     line-height: 30px;
+    padding-top: 12px;
+    padding-left: 40px;
   }
 
   .production__make-order {
     margin: 0 auto;
-    margin-top: 40px;
+    margin-top: 35px;
     width: 584px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .production {
+    width: 1050px;
+    border: none;
+    margin-bottom: 60px;
+  }
+
+  .production__videoplayer {
+    width: 682px;
+    order: 0;
+    margin-top: -165px;
+  }
+
+  .production__title {
+    width: 350px;
+    margin-left: 670px;
+    margin-top: 75px;
+    margin-right: 60px;
+
+    &::before {
+      top: -25px;
+      left: 95px;
+    }
+  }
+
   .production__video {
     width: 682px;
     height: 455px;
@@ -80,12 +152,14 @@
 
   .production__intro-wrapper {
     width: 350px;
-    margin-left: 710px;
-    margin-top: -400px;
+    margin-left: 720px;
+    margin-top: -290px;
   }
 
   .production__make-order {
     width: 230px;
     margin: 0;
+    margin-top: -105px;
+    margin-left: 40px;
   }
 }
