--- a/source/sass/slider.scss
+++ b/source/sass/slider.scss
@@ -3,7 +3,7 @@
   display: block;
   width: 260px;
   height: 52px;
-  border: 1px solid $grey--lighter;
+  border: 1px solid $grey--lines;
   margin-top: 36px;
 }
 
@@ -12,4 +12,18 @@
   @include reset-indents;
   width: 127px;
   border: none;
+  background: transparent;
+}
+
+.slider__prev {
+  height: 52px;
+  border-right: 1px solid $grey--lines;
+}
+
+.slider__prev-img {
+  margin-top: 0;
+}
+
+.slider__prev-img--next {
+  transform: rotate(180deg);
 }
