--- a/source/sass/type.scss
+++ b/source/sass/type.scss
@@ -2,17 +2,74 @@
   @include reset-indents;
   width: 260px;
   margin: 0 auto;
+  border: none;
 }
 
 .type__title {
   @include reset-indents;
+  position: relative;
   color: $turquoise;
   text-transform: uppercase;
+  margin-top: -4px;
+  margin-bottom: 8px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 198px;
+    height: 1px;
+    background: $turquoise;
+    top: 12.5px;
+    left: 62px;
+  }
+}
+
+.type__radio input[type="radio"] + label {
+  display: inline-block;
+  position: relative;
+  margin-left: 62px;
+  line-height: 18px;
+  margin-top: 18px;
+}
+
+.type__radio input[type="radio"] + label::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  border: 2px solid $grey;
+  border-radius: 50px;
+  top: -10px;
+  left: -60px;
+}
+
+.type__radio input[type="radio"]:checked + label::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 16px;
+  height: 16px;
+  background: $turquoise;
+  border-radius: 50px;
+  top: 1px;
+  left: -48.5px;
+}
+
+.type__radio input[type="radio"] {
+  display: none;
 }
 
 @media (min-width: $tablet-width) {
   .type {
     @include tablet-center;
+    margin-top: 53px;
+    margin-bottom: 62px;
+  }
+
+  .type__radio {
+    font-size: 19px;
   }
 
   .type__wrap {
@@ -21,11 +78,49 @@
 
   .type__title {
     width: 168px;
+    margin-top: 17px;
+
+    &::before {
+      display: none;
+    }
+  }
+
+  .type__radio input[type="radio"] + label {
+    margin-left: 80px;
+
+    &::before {
+      width: 48px;
+      height: 48px;
+      top: -16px;
+      left: -80px;
+    }
+  }
+
+  .type__radio input[type="radio"]:checked + label::after {
+    width: 21px;
+    height: 21px;
+    left: -65px;
+    top: -1px;
+  }
+
+  .type__radio--margin {
+    margin-top: 35px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .type {
     @include desktop-center;
+    margin-top: 55px;
+    margin-bottom: 63px;
+  }
+
+  .type__title {
+    margin-left: 65px;
+    top: -2px;
+  }
+
+  .type__radio input[type="radio"] + label {
+    margin-left: 20px;
   }
 }
